--- a/VulkanTutorial/VulkanTutorial/VulkanTutorial.vcxproj.filters
+++ b/VulkanTutorial/VulkanTutorial/VulkanTutorial.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\26_depth_buffering.cpp">
+    <ClCompile Include="..\..\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
